--- a/MemoryGame.css
+++ b/MemoryGame.css
@@ -99,10 +99,12 @@ section{
 
 #reset{
     display: none;
-    align-self: center;
     margin-top: 20px;
+    margin-left: 665.8px;
+    margin-right: 665.8px;
     padding: 10px 20px;
     font-size: 20px;
     background-color: rgb(19, 50, 69);
     color: rgb(140, 210, 255);
+    border-radius: 25px;
 }
