--- a/MemoryGame.css
+++ b/MemoryGame.css
@@ -81,7 +81,7 @@ section{
     text-align: center;
     font-size: 50px;
     color: rgb(19, 50, 69);
-    margin-top: 0px;
+    margin: 0px;
 }
 
 .gameOverText{
