--- a/MemoryGame.css
+++ b/MemoryGame.css
@@ -80,12 +80,14 @@ section{
     display: none;
     width: 1440px;
     height: 678px;
+    padding-top: 25%;
 }
 
 .gameOver{
     text-align: center;
     font-size: 50px;
     color: rgb(19, 50, 69);
+    margin: 0px;
 }
 
 .gameOverText{
