--- a/MemoryGame.css
+++ b/MemoryGame.css
@@ -56,36 +56,39 @@ section{
 #button1{
     background-color: rgb(255, 0, 0);
     filter: saturate(50%) brightness(70%);
+    border-top-left-radius: 25px;
 }
 
 #button2{
     background-color: rgb(255, 255, 0);
     filter: saturate(50%) brightness(70%);
-
+    border-top-right-radius: 25px;
 }
 
 #button3{
     background-color: rgb(0, 0, 255);
     filter: saturate(50%) brightness(70%);
-
+    margin-top: 4px;
+    border-bottom-left-radius: 25px;
 }
 
 #button4{
     background-color: rgb(0, 255, 0);
     filter: saturate(50%) brightness(70%);
-
+    margin-top: 4px;
+    border-bottom-right-radius: 25px;
 }
 
 .gameOverDiv{
     display: none;
     width: 1440px;
-    height: 678px;
-    padding-top: 25%;
+    height: 538px;
+    padding-top: 100px;
 }
 
 .gameOver{
     text-align: center;
-    font-size: 50px;
+    font-size: 100px;
     color: rgb(19, 50, 69);
     margin: 0px;
 }
@@ -104,11 +107,19 @@ section{
 
 #reset{
     margin-top: 20px;
-    margin-left: 665.8px;
-    margin-right: 665.8px;
-    padding: 10px 20px;
+    margin-left: 626.79px;
+    margin-right: 626.79px;
+    padding: 20px 40px;
     font-size: 20px;
     background-color: rgb(19, 50, 69);
     color: rgb(140, 210, 255);
-    border-radius: 25px;
+    border-radius: 40px;
+    font-family: "Bruno Ace SC", sans-serif;
+}
+
+.copyright{
+    text-align: center;
+    font-size: 20px;
+    color: rgb(19, 50, 69);
+    margin-top: 10px;
 }
